não acaba nunca

--- a/Códigos/3.2_vou_excluir.ipynb
+++ b/Códigos/3.2_vou_excluir.ipynb
@@ -5,7 +5,7 @@
    "id": "07abb153",
    "metadata": {},
    "source": [
-    "#### lalalalala"
+    "#### lalalalala (deletar)"
    ]
   },
   {
@@ -620,783 +620,6 @@
     "df_combinacoes = pd.DataFrame(combinacoes, columns=['P04501', 'P04502'])\n",
     "\n",
     "print(df_combinacoes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "1b0eddfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['tela_combinado'] = df['P04501'].astype(str) + '-' + df['P04502'].astype(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "d85a9de7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "tela_combinado",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "frequencia",
-         "rawType": "int64",
-         "type": "integer"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "29ededaf-a3b3-4797-958e-6891794e70c9",
-       "rows": [
-        [
-         "0",
-         "2.0-6.0",
-         "3481"
-        ],
-        [
-         "1",
-         "3.0-6.0",
-         "2554"
-        ],
-        [
-         "2",
-         "1.0-6.0",
-         "2136"
-        ],
-        [
-         "3",
-         "4.0-6.0",
-         "1845"
-        ],
-        [
-         "4",
-         "2.0-1.0",
-         "1311"
-        ],
-        [
-         "5",
-         "6.0-6.0",
-         "1285"
-        ],
-        [
-         "6",
-         "1.0-1.0",
-         "1199"
-        ],
-        [
-         "7",
-         "2.0-2.0",
-         "1186"
-        ],
-        [
-         "8",
-         "3.0-1.0",
-         "915"
-        ],
-        [
-         "9",
-         "3.0-2.0",
-         "806"
-        ],
-        [
-         "10",
-         "5.0-6.0",
-         "799"
-        ],
-        [
-         "11",
-         "4.0-1.0",
-         "681"
-        ],
-        [
-         "12",
-         "1.0-2.0",
-         "668"
-        ],
-        [
-         "13",
-         "3.0-3.0",
-         "544"
-        ],
-        [
-         "14",
-         "2.0-3.0",
-         "544"
-        ],
-        [
-         "15",
-         "4.0-2.0",
-         "480"
-        ],
-        [
-         "16",
-         "4.0-4.0",
-         "370"
-        ],
-        [
-         "17",
-         "1.0-3.0",
-         "366"
-        ],
-        [
-         "18",
-         "2.0-4.0",
-         "348"
-        ],
-        [
-         "19",
-         "3.0-4.0",
-         "306"
-        ],
-        [
-         "20",
-         "4.0-3.0",
-         "303"
-        ],
-        [
-         "21",
-         "6.0-1.0",
-         "281"
-        ],
-        [
-         "22",
-         "5.0-1.0",
-         "234"
-        ],
-        [
-         "23",
-         "6.0-2.0",
-         "226"
-        ],
-        [
-         "24",
-         "1.0-4.0",
-         "209"
-        ],
-        [
-         "25",
-         "4.0-5.0",
-         "167"
-        ],
-        [
-         "26",
-         "5.0-2.0",
-         "133"
-        ],
-        [
-         "27",
-         "2.0-5.0",
-         "131"
-        ],
-        [
-         "28",
-         "6.0-3.0",
-         "125"
-        ],
-        [
-         "29",
-         "1.0-5.0",
-         "125"
-        ],
-        [
-         "30",
-         "5.0-5.0",
-         "124"
-        ],
-        [
-         "31",
-         "6.0-4.0",
-         "110"
-        ],
-        [
-         "32",
-         "3.0-5.0",
-         "108"
-        ],
-        [
-         "33",
-         "5.0-4.0",
-         "103"
-        ],
-        [
-         "34",
-         "5.0-3.0",
-         "74"
-        ],
-        [
-         "35",
-         "6.0-5.0",
-         "68"
-        ]
-       ],
-       "shape": {
-        "columns": 2,
-        "rows": 36
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tela_combinado</th>\n",
-       "      <th>frequencia</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.0-6.0</td>\n",
-       "      <td>3481</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.0-6.0</td>\n",
-       "      <td>2554</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.0-6.0</td>\n",
-       "      <td>2136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.0-6.0</td>\n",
-       "      <td>1845</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.0-1.0</td>\n",
-       "      <td>1311</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6.0-6.0</td>\n",
-       "      <td>1285</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1.0-1.0</td>\n",
-       "      <td>1199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2.0-2.0</td>\n",
-       "      <td>1186</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>3.0-1.0</td>\n",
-       "      <td>915</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>3.0-2.0</td>\n",
-       "      <td>806</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>5.0-6.0</td>\n",
-       "      <td>799</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>4.0-1.0</td>\n",
-       "      <td>681</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1.0-2.0</td>\n",
-       "      <td>668</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>3.0-3.0</td>\n",
-       "      <td>544</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2.0-3.0</td>\n",
-       "      <td>544</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>4.0-2.0</td>\n",
-       "      <td>480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>4.0-4.0</td>\n",
-       "      <td>370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1.0-3.0</td>\n",
-       "      <td>366</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2.0-4.0</td>\n",
-       "      <td>348</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>3.0-4.0</td>\n",
-       "      <td>306</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>4.0-3.0</td>\n",
-       "      <td>303</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>6.0-1.0</td>\n",
-       "      <td>281</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>5.0-1.0</td>\n",
-       "      <td>234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>6.0-2.0</td>\n",
-       "      <td>226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1.0-4.0</td>\n",
-       "      <td>209</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>4.0-5.0</td>\n",
-       "      <td>167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>5.0-2.0</td>\n",
-       "      <td>133</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2.0-5.0</td>\n",
-       "      <td>131</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>6.0-3.0</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>1.0-5.0</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>5.0-5.0</td>\n",
-       "      <td>124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>6.0-4.0</td>\n",
-       "      <td>110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>3.0-5.0</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>5.0-4.0</td>\n",
-       "      <td>103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>5.0-3.0</td>\n",
-       "      <td>74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>6.0-5.0</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   tela_combinado  frequencia\n",
-       "0         2.0-6.0        3481\n",
-       "1         3.0-6.0        2554\n",
-       "2         1.0-6.0        2136\n",
-       "3         4.0-6.0        1845\n",
-       "4         2.0-1.0        1311\n",
-       "5         6.0-6.0        1285\n",
-       "6         1.0-1.0        1199\n",
-       "7         2.0-2.0        1186\n",
-       "8         3.0-1.0         915\n",
-       "9         3.0-2.0         806\n",
-       "10        5.0-6.0         799\n",
-       "11        4.0-1.0         681\n",
-       "12        1.0-2.0         668\n",
-       "13        3.0-3.0         544\n",
-       "14        2.0-3.0         544\n",
-       "15        4.0-2.0         480\n",
-       "16        4.0-4.0         370\n",
-       "17        1.0-3.0         366\n",
-       "18        2.0-4.0         348\n",
-       "19        3.0-4.0         306\n",
-       "20        4.0-3.0         303\n",
-       "21        6.0-1.0         281\n",
-       "22        5.0-1.0         234\n",
-       "23        6.0-2.0         226\n",
-       "24        1.0-4.0         209\n",
-       "25        4.0-5.0         167\n",
-       "26        5.0-2.0         133\n",
-       "27        2.0-5.0         131\n",
-       "28        6.0-3.0         125\n",
-       "29        1.0-5.0         125\n",
-       "30        5.0-5.0         124\n",
-       "31        6.0-4.0         110\n",
-       "32        3.0-5.0         108\n",
-       "33        5.0-4.0         103\n",
-       "34        5.0-3.0          74\n",
-       "35        6.0-5.0          68"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Criar coluna combinada como string, tipo \"1-2\", \"3-4\"\n",
-    "df['tela_combinado'] = df['P04501'].astype(str) + '-' + df['P04502'].astype(str)\n",
-    "\n",
-    "# Contar as combinações\n",
-    "frequencias_tela = df['tela_combinado'].value_counts().reset_index()\n",
-    "frequencias_tela.columns = ['tela_combinado', 'frequencia']\n",
-    "\n",
-    "# Visualizar o resultado\n",
-    "frequencias_tela\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "id": "b44a4675",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop(columns=['tela_combinado'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f33c769d",
-   "metadata": {},
-   "source": [
-    "0 - não tem DC\n",
-    "1 - de 0 a 25 anos\n",
-    "2 - de 25 a 40 anos\n",
-    "3 - de 40 a 55 anos\n",
-    "4 - de 55 a 70 anos\n",
-    "5 - > de 70 anos "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "c80c08a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def categorizar_dc(idade):\n",
-    "    if idade == 0:\n",
-    "        return 0  # Não tem doença do coração\n",
-    "    elif idade <= 25:\n",
-    "        return 1\n",
-    "    elif idade <= 40:\n",
-    "        return 2\n",
-    "    elif idade <= 55:\n",
-    "        return 3\n",
-    "    elif idade <= 70:\n",
-    "        return 4\n",
-    "    else:\n",
-    "        return 5\n",
-    "\n",
-    "df['Q064'] = df['Q064'].apply(categorizar_dc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "56d892d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Q064\n",
-       "0    22680\n",
-       "1       94\n",
-       "2      261\n",
-       "3      584\n",
-       "4      513\n",
-       "5      186\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['Q064'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "3d4aa60d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.to_csv('../Bases/Criados/5_plano_cartesiano.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1589ad2b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Não tem necessidade\n",
-    "##df = df.drop('V0031', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "id": "6fadcdec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# J01101 Quando ____ consultou um médico pela última vez \n",
-    "# H001 Quando foi a última vez que o(a) sr(a) consultou com um(a) médico(a)?\n",
-    "# É a mesma coisa e não é util\n",
-    "\n",
-    "df = df.drop('J01101', axis=1)\n",
-    "df = df.drop('H001', axis=1)\n",
-    "\n",
-    "# Primeira consulta com esse médico?\n",
-    "# Local do atendimento\n",
-    "# Dificuldade para atendimento\n",
-    "# Todas essas tão bem inuteis\n",
-    "\n",
-    "df = df.drop('H002', axis=1)\n",
-    "df = df.drop('H004', axis=1)\n",
-    "df = df.drop('H010', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "id": "8cf5240a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# E006011 e E008 dropados por não trazerem muita info util\n",
-    "df = df.drop('E008', axis=1)\n",
-    "df = df.drop('E006011', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "id": "6b5905f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Não são muito uteis, eu sei que medem a cobertura do plano mas ta intankavel colocar isso aq\n",
-    "# Titular do plano de saúde\n",
-    "# Nº de ordem do titular\n",
-    "# Plano de servidor público?\n",
-    "\n",
-    "# df = df.drop('I00103', axis=1)\n",
-    "# df = df.drop('I001031', axis=1)\n",
-    "# df = df.drop('I004', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "id": "123b52db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Juntei todos os atributos que diziam valor de renda que recebiam no renda\n",
-    "\n",
-    "# Ajustando os valores conforme as condições especificadas\n",
-    "df['F001021'] = df.apply(lambda x: x['F001021'] if x['F001011'] == 1 else 0, axis=1)\n",
-    "df['F007021'] = df.apply(lambda x: x['F007021'] if x['F007011'] == 1 else 0, axis=1)\n",
-    "df['F008021'] = df.apply(lambda x: x['F008021'] if x['F008011'] == 1 else 0, axis=1)\n",
-    "df['VDF00102'] = df.apply(lambda x: x['VDF00102'] if x['VDF001'] == 1 else 0, axis=1)\n",
-    "\n",
-    "# Somando tudo com a renda\n",
-    "df['Renda'] = df['Renda'] + df['F001021'] + df['F007021'] + df['F008021'] + df['VDF00102']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "id": "5371348e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dropei os atributos usados anteriormente\n",
-    "df = df.drop('F001021', axis=1)\n",
-    "df = df.drop('F007021', axis=1)\n",
-    "df = df.drop('F008021', axis=1)\n",
-    "df = df.drop('VDF00102', axis=1)\n",
-    "df = df.drop('F001011', axis=1)\n",
-    "df = df.drop('F007011', axis=1)\n",
-    "df = df.drop('F008011', axis=1)\n",
-    "df = df.drop('VDF001', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "id": "9c3ca547",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Criando o novo atributo combinado do plano de saude\n",
-    "# df['Plano_de_Saúde_Cobertura'] = df['I00102'].astype(str)  # Começa com o valor de I00102\n",
-    "\n",
-    "# Combinando com I00401, I00402, I00403 apenas quando I00102 for 1\n",
-    "#df.loc[df['I00102'] == 1, 'Plano_de_Saúde_Cobertura'] = (\n",
-    "#   df['I00102'].astype(str) + ' ' + \n",
-    "#    df['I00401'].astype(str) + ' ' + \n",
-    "#    df['I00402'].astype(str) + ' ' +  \n",
-    "#    df['I00403'].astype(str)\n",
-    "#)\n",
-    "\n",
-    "# Quando I00102 for 2, mantém apenas \"2\" (não combina com os outros)\n",
-    "#df.loc[df['I00102'] == 2, 'Plano_de_Saúde_Cobertura'] = '2'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "id": "a42dd85e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dropei os atributos usados anteriormente\n",
-    "#df = df.drop('I00401', axis=1)\n",
-    "#df = df.drop('I00402', axis=1)\n",
-    "#df = df.drop('I00403', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "id": "347f43d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Registros nulos na soma: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Criando a nova coluna com a soma das horas tv e dispositivos\n",
-    "df['horas_dispositivos_tv'] = df['P04501'] + df['P04502']\n",
-    "\n",
-    "# Verificando se há valores nulos (opcional)\n",
-    "print(\"Registros nulos na soma:\", df['horas_dispositivos_tv'].isnull().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "id": "a4a81c41",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         8.0\n",
-       "1         7.0\n",
-       "2         4.0\n",
-       "3         6.0\n",
-       "4         7.0\n",
-       "         ... \n",
-       "24340     4.0\n",
-       "24341     8.0\n",
-       "24342     4.0\n",
-       "24343    10.0\n",
-       "24344     8.0\n",
-       "Name: horas_dispositivos_tv, Length: 24345, dtype: float64"
-      ]
-     },
-     "execution_count": 173,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['horas_dispositivos_tv']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "id": "cc0deeba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dropei os atributos usados anteriormente\n",
-    "df = df.drop('P04501', axis=1)\n",
-    "df = df.drop('P04502', axis=1)"
    ]
   },
   {
