--- a/Códigos/metodo_selecao_atributos.ipynb
+++ b/Códigos/metodo_selecao_atributos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "b6151b2c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "34597ddc",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "5b179d9a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "15dadb81",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "d79846ec",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "47874f8f",
    "metadata": {},
    "outputs": [],
@@ -68,35 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "175fbca6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "indices_selected = raco.run_colony(X, y, p, False, metric)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8b0b0a7c",
    "metadata": {},
    "outputs": [],
@@ -106,13 +88,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "044d26b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[    1     2     5 ... 12185 12186 12187]\n",
+      "[ 0  1  3  5  6  8  9 12 13 14 15 16 17 19 20 21 23 24 27 28 29 30 31 33\n",
+      " 35 36 37 38 39 41 42 43 44 45 46 47 49 50 51 53 54 55 56 57 58 59 60]\n"
+     ]
+    }
+   ],
    "source": [
     "print(indices_selected)\n",
     "print(features_selected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e76a994a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['V0001', 'V0026', 'B001', 'C008', 'C009', 'J001', 'J00101', 'N010', 'N011', 'N012', 'N016', 'P00104', 'P00404', 'P01101', 'P02001', 'P018', 'P02501', 'P02602', 'P04502', 'P06701', 'P068', 'Q00201', 'Q03001', 'Q06306', 'Q11006', 'Q128', 'T001', 'H003', 'H004', 'N00101', 'H001', 'H002', 'Escolaridade', 'Renda', 'Quant_trabalhos', 'Carga_horaria_semanal', 'Avaliacao_plano', 'Instituicao_plano', 'Cobertura_plano', 'Exposicao_ruido', 'Exposicao_lixo', 'Exposicao_minerio', 'Atividade_fisica_semanal', 'Inicio_tabagismo', 'Tempo_parou_fumar', 'Intensidade_fumo', 'Consumo_alcool']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lista dos índices\n",
+    "indices = [0, 1, 3, 5, 6, 8, 9, 12, 13, 14, 15, 16, 17, 19, 20, 21, 23, 24, 27, 28, 29, 30, 31, 33,\n",
+    "           35, 36, 37, 38, 39, 41, 42, 43, 44, 45, 46, 47, 49, 50, 51, 53, 54, 55, 56, 57, 58, 59, 60]\n",
+    "\n",
+    "# Lê a base\n",
+    "df = pd.read_csv('../Bases/Criados/5_base_codificada.csv')\n",
+    "\n",
+    "# Seleciona os nomes das colunas com base nos índices\n",
+    "nomes_colunas = df.columns[indices].tolist()\n",
+    "\n",
+    "# Exibe os nomes\n",
+    "print(nomes_colunas)"
    ]
   }
  ],
