--- a/Códigos/metodo_selecao_atributos.ipynb
+++ b/Códigos/metodo_selecao_atributos.ipynb
@@ -135,6 +135,28 @@
     "# Exibe os nomes\n",
     "print(nomes_colunas)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "835dedf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base salva com sucesso.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Selecionar apenas as colunas pelos índices\n",
+    "df_selecionado = df.iloc[:, indices]\n",
+    "\n",
+    "# Salvar em um novo arquivo CSV\n",
+    "df_selecionado.to_csv('../Bases/Criados/6_base_final.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
